--- a/group_flask_starter/client/public/index.html
+++ b/group_flask_starter/client/public/index.html
@@ -9,7 +9,7 @@
       name="viewport"
       content="minimum-scale=1, initial-scale=1, width=device-width"
     />
-    <title>Simple React App</title>
+    <title>Snack Overflow</title>
   </head>
   <body>
     <div id="root"></div>
