--- a/snackOverflow/client/public/index.html
+++ b/snackOverflow/client/public/index.html
@@ -10,6 +10,17 @@
       name="viewport"
       content="minimum-scale=1, initial-scale=1, width=device-width"
     />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="app" />
+    <meta property="og:title" content="fumblr" />
+    <meta property="og:description" content="A clone of Tumblr to allow users to  blog with different media such as images, video, text, quote and more" />
+    <meta property="og:url" content="https://fumblrcloneapp.herokuapp.com/" />
+    <meta property="og:site_name" content="fumblrcloneapp.herokuapp.com" />
+    <meta property="og:image" content="fumblrClonePreview1.png" name="image" />
+    <!-- <meta property="og:image:secure_url" content="./fumblrClonePreview1.png"   /> -->
+    <meta property="og:image:width" content="1500" />
+    <meta property="og:image:height" content="1000" />
+    <meta property="og:image:alt" content="fumblr clone app" />
     <title>Snack Overflow</title>
   </head>
   <body>
