--- a/snackOverflow/client/public/index.html
+++ b/snackOverflow/client/public/index.html
@@ -12,15 +12,15 @@
     />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="app" />
-    <meta property="og:title" content="fumblr" />
-    <meta property="og:description" content="A clone of Tumblr to allow users to  blog with different media such as images, video, text, quote and more" />
-    <meta property="og:url" content="https://fumblrcloneapp.herokuapp.com/" />
-    <meta property="og:site_name" content="fumblrcloneapp.herokuapp.com" />
-    <meta property="og:image" content="fumblrClonePreview1.png" name="image" />
+    <meta property="og:title" content="SnackOverflow" />
+    <meta property="og:description" content="A clone of StackOverflow to allow users to ask questions, answer questions, vote on the best answer and more " />
+    <meta property="og:url" content="https://snack-overflow-app.herokuapp.com/" />
+    <meta property="og:site_name" content="snack-overflow-app.herokuapp.com" />
+    <meta property="og:image" content="snackOverflowLinkPreview.png" name="image" />
     <!-- <meta property="og:image:secure_url" content="./fumblrClonePreview1.png"   /> -->
     <meta property="og:image:width" content="1500" />
     <meta property="og:image:height" content="1000" />
-    <meta property="og:image:alt" content="fumblr clone app" />
+    <meta property="og:image:alt" content="StackOverflow clone app called SnackOverflow" />
     <title>Snack Overflow</title>
   </head>
   <body>
