--- a/snackOverflow/client/public/index.html
+++ b/snackOverflow/client/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="refresh" content="1200">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap">
@@ -16,7 +17,7 @@
     <meta property="og:description" content="A clone of StackOverflow to allow users to ask questions, answer questions, vote on the best answer and more " />
     <meta property="og:url" content="https://snack-overflow-app.herokuapp.com/" />
     <meta property="og:site_name" content="snack-overflow-app.herokuapp.com" />
-    <meta property="og:image" content="snackOverflowLinkPreview.png" name="image" />
+    <meta property="og:image" content="./snackOverflowLinkPreview.png" name="image" />
     <!-- <meta property="og:image:secure_url" content="./fumblrClonePreview1.png"   /> -->
     <meta property="og:image:width" content="1500" />
     <meta property="og:image:height" content="1000" />
